--- a/src/MovieTrackerBundle/Resources/views/Admin/Movies/view.html.twig
+++ b/src/MovieTrackerBundle/Resources/views/Admin/Movies/view.html.twig
@@ -3,7 +3,7 @@
 {% block page_title %}Add Movie{% endblock page_title %}
 
 {% block page_body %}
-<h2>Add Movies</h2>
+<h2>Edit Movie</h2>
 {% form_theme movieForm 'bootstrap_3_horizontal_layout.html.twig' %}
 {{ form(movieForm) }}
 {% endblock page_body %}
