--- a/src/MovieTrackerBundle/Resources/views/Admin/base.html.twig
+++ b/src/MovieTrackerBundle/Resources/views/Admin/base.html.twig
@@ -11,6 +11,17 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
+            {% for message in app.session.flashbag.get('notice') %}
+                <div class="alert alert-success" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
+            {% for message in app.session.flashbag.get('error') %}
+                <div class="alert alert-danger" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
             {% block page_body %}
             {% endblock page_body %}
         </div>
