--- a/src/MovieTrackerBundle/Resources/views/Default/home.html.twig
+++ b/src/MovieTrackerBundle/Resources/views/Default/home.html.twig
@@ -14,7 +14,7 @@
         </div>
         <ul class="nav navbar-nav">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Year Watched <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Movies<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="{{ path('public_by_year', { 'year': 2017 }) }}">2017</a></li>
                     <li><a href="{{ path('public_by_year', { 'year': 2016 }) }}">2016</a></li>
@@ -25,6 +25,12 @@
                     <li><a href="{{ path('public_by_year', { 'year': 2011 }) }}">2011</a></li>
                 </ul>
             </li>
+            <li>
+                <a href="#">Series</a>
+            </li>
+            <li>
+                <a href="#">Watch List</a>
+            </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ path('admin_manage_movies') }}">Admin</a></li>
@@ -32,7 +38,37 @@
     </div>
 </nav>
 
-<table class="table table-striped">
+
+<div class="container-fluid">
+        {% for movie in movies %}
+            {% if (loop.index % 5) == 1 %}
+                <div class="row">
+                    <div class="col-md-2 col-md-offset-1"><div class="poster" style="background-image: url('{{ movie.poster }}');"></div></div>
+            {% else %}
+                <div class="col-md-2"><div class="poster" style="background-image: url('{{ movie.poster }}');"></div></div>
+            {% endif %}
+            {% if (loop.index % 5) == 0 %}
+                </div>
+            {% endif %}
+        {% endfor %}
+</div>
+
+<style>
+
+.poster {
+    width: 300px;
+    height: 444px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.row {
+    margin-top: 30px;
+}
+
+</style>
+<!-- <table class="table table-striped">
     <thead>
         <tr>
             <th>Title</th>
@@ -47,7 +83,7 @@
             </tr>
         {% endfor %}
     </tbody>
-</table>
+</table> -->
 
 </body>
 </html>
