--- a/src/MovieTrackerBundle/Resources/views/Admin/Movies/manage.html.twig
+++ b/src/MovieTrackerBundle/Resources/views/Admin/Movies/manage.html.twig
@@ -11,6 +11,7 @@
             <th>Title</th>
             <th>Director</th>
             <th>IMDB ID</th>
+            <th>Rating</th>
         </tr>
     </thead>
     <tbody>
@@ -19,6 +20,7 @@
                 <td><a href="{{ path('admin_view_movie', { 'movie_id': movie.id }) }}">{{ movie.title }}</a></td>
                 <td>{{ movie.director }}</td>
                 <td><a href="http://www.imdb.com/title/{{movie.imdbId}}/">{{ movie.imdbId }}</a></td>
+                <td>{{ movie.rating }}</td>
             </tr>
         {% endfor %}
     </tbody>
